--- a/ecm/pom.xml
+++ b/ecm/pom.xml
@@ -37,7 +37,12 @@
 		</dependency>
 		<dependency>
 			<groupId>net.vksn.bedrock</groupId>
-			<artifactId>api</artifactId>
+			<artifactId>core</artifactId>
+			<version>0.5.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.vksn.bedrock</groupId>
+			<artifactId>bedrock-security</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 		</dependency>
 
@@ -101,7 +106,25 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-
+		
+			<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.1.3.RELEASE</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.1.3.RELEASE</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.1.3.RELEASE</version>
+		</dependency>
 		<!-- View Dependencies -->
 		<dependency>
 			<groupId>taglibs</groupId>
