--- a/ecm/src/main/webapp/WEB-INF/web.xml
+++ b/ecm/src/main/webapp/WEB-INF/web.xml
@@ -11,16 +11,34 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/conf/applicationContext.xml
+		/WEB-INF/conf/app/securityDefinition.xml
 		classpath:net/vksn/ecm/dataSourceContext.xml
 		classpath:net/vksn/sitemap/dataAccessContext.xml
 		classpath:net/vksn/sitemap/transactionContext.xml
-		classpath:net/vksn/bedrock/dataAccessContext.xml</param-value>
+		classpath:net/vksn/bedrock/dataAccessContext.xml
+		classpath:net/vksn/bedrock/security/securityContext.xml
+		</param-value>
 	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	<filter>
+		<filter-name>springOpenSessionInViewFilter</filter-name>
+		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springOpenSessionInViewFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping> 
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter>
 		<filter-name>sitemapFilter</filter-name>
 		<filter-class>net.vksn.ecm.filters.SitemapFilter</filter-class>
@@ -40,21 +58,12 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-<!-- 		<servlet> -->
-<!-- 		<servlet-name>managementDispatcher</servlet-name> -->
-<!-- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> -->
-<!-- 		<init-param> -->
-<!-- 			<param-name>contextConfigLocation</param-name> -->
-<!-- 			<param-value>/WEB-INF/conf/app/dispatcher-context.xml</param-value> -->
-<!-- 		</init-param> -->
-<!-- 		<load-on-startup>1</load-on-startup> -->
-<!-- 	</servlet> -->
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
-<!-- 	<servlet-mapping> -->
-<!-- 		<servlet-name>managementDispatcher</servlet-name> -->
-<!-- 		<url-pattern>*.do</url-pattern> -->
-<!-- 	</servlet-mapping> -->
 </web-app>
