--- a/ecm/src/main/webapp/WEB-INF/web.xml
+++ b/ecm/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>sitemapFilter</filter-name>
-		<url-pattern>*.html</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
 	<!-- Processes application requests -->
