--- a/ecm/pom.xml
+++ b/ecm/pom.xml
@@ -133,6 +133,12 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 		<!-- Test Dependencies -->
