--- a/ecm/pom.xml
+++ b/ecm/pom.xml
@@ -7,7 +7,10 @@
 		<artifactId>master-pom</artifactId>
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
-
+	<scm>
+		<connection>scm:git:ssh://github.com/Timizki/testing.git</connection>
+		<developerConnection>scm:git:ssh://github.com/Timizki/testing.git</developerConnection>
+	</scm>
 	<groupId>net.vksn.ecm</groupId>
 	<artifactId>ecm</artifactId>
 	<packaging>war</packaging>
